<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SearchResultsActivity"
    android:id="@+id/layout" >
    
    <RelativeLayout
        android:id="@+id/topLayout"
        android:layout_marginBottom="15dp"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/charthistory_label"
        android:layout_alignParentTop="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/charthistory_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/query_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/charthistory_label"
        android:layout_centerHorizontal="true"
        android:text="Artist - Song"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    </RelativeLayout>

    
    <!-- 
    <Spinner
        android:id="@+id/searchResultSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/query_label"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="15dp" />
     -->
    
    <ScrollView
        android:id="@+id/resultsScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/topLayout">

    <RelativeLayout
        android:id="@+id/resultDisplayLayout"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/entryTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:tag="entry"
            android:text="@string/entryposition_label" />
        
         <TextView
             android:id="@+id/peakTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/entryTextView"
             android:layout_centerHorizontal="true"
             android:tag="peak"
             android:text="@string/peakposition_label" />
         
         <TextView
             android:id="@+id/dropoffTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/peakTextView"
             android:layout_centerHorizontal="true"
             android:tag="dropoff"
             android:text="@string/dropoffposition_label" />

    </RelativeLayout>
    
    </ScrollView>

</RelativeLayout>